--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,15 @@
 {erl_opts, [debug_info]}.
 {deps, []}.
 
+{profiles, [
+  {compile, [
+    {erl_opts, [
+      warnings_as_errors,
+      warn_missing_spec
+    ]}
+  ]}
+]}.
+
 {pre_hooks, [
   {"(linux|darwin)", compile, "make -C c_src"}
 ]}.
