--- a/c_src/Makefile
+++ b/c_src/Makefile
@@ -1,18 +1,35 @@
-ERL_INCLUDE := $(shell erl -noshell -s init stop -eval "io:format(\"~ts/erts-~ts/include/\", [code:root_dir(), erlang:system_info(version)]).")
+ERTS_INCLUDE_DIR ?= $(shell erl -noshell -s init stop -eval "io:format(\"~s/erts-~s/include/\", [code:root_dir(), erlang:system_info(version)]).")
 ERL_INTERFACE_INCLUDE := $(shell erl -noshell -s init stop -eval "io:format(\"~ts\", [code:lib_dir(erl_interface, include)]).")
+ERL_INTERFACE_INCLUDE_DIR ?= $(shell erl -noshell -s init stop -eval "io:format(\"~s\", [code:lib_dir(erl_interface, include)]).")
 ERL_INTERFACE_LIB := $(shell erl -noshell -s init stop -eval "io:format(\"~ts\", [code:lib_dir(erl_interface, lib)]).")
+ERL_INTERFACE_LIB_DIR ?= $(shell erl -noshell -s init stop -eval "io:format(\"~s\", [code:lib_dir(erl_interface, lib)]).")
 
+UNAME_SYS := $(shell uname -s)
+ifeq ($(UNAME_SYS), Darwin)
+	CC ?= cc
+	CFLAGS ?= -O3 -std=c99 -arch x86_64 -finline-functions -Wall
+	CXXFLAGS ?= -O3 -arch x86_64 -finline-functions -Wall
+	LDFLAGS ?= -arch x86_64 -flat_namespace -undefined suppress
+else ifeq ($(UNAME_SYS), FreeBSD)
+	CC ?= cc
+	CFLAGS ?= -O3 -std=c99 -finline-functions -Wall
+	CXXFLAGS ?= -O3 -finline-functions -Wall
+else ifeq ($(UNAME_SYS), Linux)
+	CC ?= gcc
+	CFLAGS ?= -O3 -std=c99 -finline-functions -Wall
+	CXXFLAGS ?= -O3 -finline-functions -Wall
+endif
+
+CFLAGS += -fPIC -I $(ERTS_INCLUDE_DIR) -I $(ERL_INTERFACE_INCLUDE_DIR)
+CXXFLAGS += -fPIC -I $(ERTS_INCLUDE_DIR) -I $(ERL_INTERFACE_INCLUDE_DIR)
+LDLIBS += -L $(ERL_INTERFACE_LIB_DIR) -lei
+LDFLAGS += -shared
 LIB := earlsip
-CC := gcc
-CFLAGS := -g -std=c11 $(WARNING_FLAGS) -Werror -O3 \
-          -fPIC -shared \
-          -I $(ERL_INCLUDE) -I $(ERL_INTERFACE_INCLUDE)
-LDFLAGS := -L $(ERL_INTERFACE_LIB) -lei
 TARGET := ../priv/$(LIB).so
 
 all: deps
 	mkdir -p ../priv
-	$(CC) -o $(TARGET) $(CFLAGS) $(LDFLAGS) *.c
+	$(CC) -o $(TARGET) $(CFLAGS) $(LDFLAGS) $(LDLIBS) *.c
 
 deps:
 	@if git submodule status | egrep -q '^[-]|^[+]' ; then \
